src/epub/css/local.css
@charset "utf-8";
@namespace epub "http://www.idpf.org/2007/ops";

[epub|type~="z3998:letter"] header{
	text-align: right;
}

footer{
	margin-top: 1em;
	text-align: right;
}

[epub|type~="z3998:salutation"] + p,
[epub|type~="z3998:letter"] header + p{
	text-indent: 0;
}

[epub|type~="z3998:sender"],
[epub|type~="z3998:salutation"],
[epub|type~="z3998:signature"]{
	font-variant: small-caps;
}

#chapter-1 blockquote,
#chapter-3 blockquote:first-of-type,
#chapter-9 blockquote:last-of-type{
	text-align: center;
}

